--- a/src/sections/SecondSection/styles.module.scss
+++ b/src/sections/SecondSection/styles.module.scss
@@ -1,10 +1,21 @@
 .secondSection {
+  padding-top: 56px;
+  position: relative;
+
   ul{
+    position: absolute;
+    top: 0;
+    width: 100%;
     height: 56px;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: #e36c3f;
 
+    &.isFixed{
+      position: fixed;
+
+    }
     li{
       position: relative;
       color: white;
@@ -29,6 +40,7 @@
   }
   // Tab content
   section {
+    scroll-margin: 56px;
     padding: 16px;
 
     h2 {
@@ -38,6 +50,39 @@
       margin-top: 16px;
       width: 100%;
       border-radius: 6px;
+    }
+  }
+
+  // App 内打开
+  .btnWrapper{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 64px;
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+    opacity: 0;
+    transform: translateX(64px);
+    transition: opacity .3s, transform .3s;
+
+    &.visible{
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    img {
+      width: 100px;
+    }
+
+    button{
+      border: none;
+      padding: 8px 16px;
+      border-radius: 50px;
+      color: white;
+      background-color: #fb7299;
     }
   }
 }
